[gd_scene load_steps=11 format=3 uid="uid://c6dl8ag8yhskq"]

[ext_resource type="Texture2D" uid="uid://bjg5fygfb0yvm" path="res://Textures/Props/Bullet.png" id="1_5a6n0"]
[ext_resource type="Script" path="res://Scripts/Props/bullet.gd" id="1_r7pj2"]
[ext_resource type="PackedScene" uid="uid://bkp0gna2taagk" path="res://Scenes/Components/hitbox.tscn" id="3_5214q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_81kun"]
size = Vector2(4, 1)

[sub_resource type="Gradient" id="Gradient_g6ukr"]
offsets = PackedFloat32Array(0, 0.977778, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0.540741)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ihv35"]
gradient = SubResource("Gradient_g6ukr")

[sub_resource type="Curve" id="Curve_r1hqg"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.168675, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_f8exs"]
curve = SubResource("Curve_r1hqg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0ksfr"]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 16.0
initial_velocity_max = 32.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
angle_min = -720.0
angle_max = 720.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_f8exs")
color = Color(0.870588, 0.980392, 0.647059, 1)
color_ramp = SubResource("GradientTexture1D_ihv35")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bca47"]
size = Vector2(4, 1)

[node name="Bullet" type="Area2D"]
collision_mask = 5
script = ExtResource("1_r7pj2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5a6n0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_81kun")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(2, 0)
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_0ksfr")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="CollisionTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="NoCollisionTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource("3_5214q")]
damage = 1

[node name="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
shape = SubResource("RectangleShape2D_bca47")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_collision_timer_timeout"]
[connection signal="timeout" from="NoCollisionTimer" to="." method="_on_no_collision_timer_timeout"]

[editable path="Hitbox"]
